# gtfs_auto_downloader

./: .env  .gitignore  .pre-commit-config.yaml  120.py  20.py  60.py  Dockerfile  Makefile  Readme.md  Taskfile.yml  docker-compose.yml  environment.yml  main.py  main.sh  pyproject.toml  requirements.txt  setup.sh  test.py  timer-examples.sh  複数の非同期処理がどれほどの実行間隔で行われているのかの確認.ipynb  非同期処理を分ごとにリセットする.ipynb
Crawler/: Toyama_Chitetsu.py
Crawler/120/: KantoBus_TripUpdate.py
Crawler/20/: ToyamaChitetsuBus_TripUpdates.py  ToyamaChitetsuBus_VehiclePositions.py  ToyamaChitetsuTram_TripUpdates.py  ToyamaChitetsuTram_VehiclePositions.py
Crawler/60/: Docomo_GBFS.py  ToyamaChitetsuBus_TripUpdates.py
Crawler/lib/: file.py
app/: main.sh
app/src/: crawl.py  decompress.py  test.py
app/src/Crawler/120/: KantoBus_TripUpdate.py
app/src/Crawler/1day/: KantoBus_GTFS.py
app/src/Crawler/20/: ToyamaChitetsuBus_VehiclePositions.py  ToyamaChitetsuTram_VehiclePositions.py
app/src/Crawler/60/: Docomo_GBFS.py  Hello_GBFS.py
app/utils/: logger.py
docker/dkron.data/raft/: raft.db
src/: compress.py  crawl.py  decompress.py
src/Crawler/120/: KantoBus_VehiclePosition.py
src/Crawler/20/: ToyamaChitetsuBus_TripUpdates.py  ToyamaChitetsuBus_VehiclePositions.py  ToyamaChitetsuTram_TripUpdates.py  ToyamaChitetsuTram_VehiclePositions.py
src/Crawler/60/: Docomo_GBFS.py  Hello_GBFS.py
