[project]
name = "gtfs_rt_crawler"
version = "0.1.0"
description = "GTFS Realtime data crawler"
authors = [{name = "y-shibuki"}]
readme = "Readme.md"
requires-python = ">=3.11"
dependencies = [
    "requests==2.31.0",
    "protobuf==4.23.2",
    "gtfs-realtime-bindings==1.0.0",
    "python-dotenv==1.0.0",
    "pandas==2.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []
