[project]
name = "gtfs_auto_downloader"
version = "0.1.0"
description = "GTFS Realtime Data Auto Downloader"
authors = [{name = "y-shibuki"}]
readme = "Readme.md"
requires-python = ">=3.11"
dependencies = [
    "requests==2.31.0",
    "protobuf==4.23.2",
    "gtfs-realtime-bindings==1.0.0",
    "python-dotenv==1.0.0",
    "pandas==2.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = []
